--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -10,8 +10,8 @@
   <div class="main">
     <div class="top">
       <object width="1230" height="376" data="/shap_ARgroup.swf" type="application/x-shockwave-flash">
-        <param name="wmode" value="transparent">
-        <param value="shap_ARgroup.swf" name="movie">
+        <param name="wmode" value="transparent"/>
+        <param value="shap_ARgroup.swf" name="movie"/>
       </object>
     </div>
     <div class="top_line"></div>
@@ -36,8 +36,8 @@
 <% end %>
         </div>
         <div class="flash"><object width="430" height="256" data="/prezentation.swf" type="application/x-shockwave-flash">
-          <param name="wmode" value="transparent">
-          <param value="prezentation.swf" name="movie">
+          <param name="wmode" value="transparent"/>
+          <param value="prezentation.swf" name="movie"/>
         </object></div>
         <div class="about"><%= link_to "О продукте", :about_product %></div>
         <div class="clear">&#160;</div>
@@ -46,8 +46,8 @@
         <div class="c_content_l">
           <div>
             <div><object width="130" height="600" data="/rest_ban1.swf" type="application/x-shockwave-flash">
-              <param name="wmode" value="transparent"> 
-              <param value="rest_ban1.swf" name="movie">
+              <param name="wmode" value="transparent"/> 
+              <param value="rest_ban1.swf" name="movie"/>
             </object></div>
           </div>
         </div>
@@ -59,8 +59,8 @@
         <div class="c_content_r">
           <div class="c_content_r_i">
             <div><object width="130" height="600" data="/rest_ban2.swf" type="application/x-shockwave-flash">
-              <param name="wmode" value="transparent">
-              <param value="rest_ban2.swf" name="movie">
+              <param name="wmode" value="transparent"/>
+              <param value="rest_ban2.swf" name="movie"/>
             </object></div>
           </div>
         </div>
@@ -69,12 +69,12 @@
       <table width="100%">
         <tr>
           <td align="right"><object width="580" height="150" data="/RUSkompany.swf" type="application/x-shockwave-flash">
-            <param name="wmode" value="transparent">
-            <param value="RUSkompany.swf" name="movie"></object></td>
+            <param name="wmode" value="transparent"/>
+            <param value="RUSkompany.swf" name="movie"/></object></td>
           <td width="50%"></td>
           <td align="left"><object width="580" height="150" data="/BL_banner.swf" type="application/x-shockwave-flash"> 
-            <param name="wmode" value="transparent">
-            <param value="BL_banner.swf" name="movie"></object></td>
+            <param name="wmode" value="transparent"/>
+            <param value="BL_banner.swf" name="movie"/></object></td>
         </tr>
       </table>
     </div>
