--- a/app/views/layouts/demo.html.erb
+++ b/app/views/layouts/demo.html.erb
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Digital Menu Demo</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag    "demo", :media => "all" %>
+  <%= javascript_include_tag "demo" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
