--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -36,8 +36,8 @@ a {
   background: url('/assets/top_line.gif') repeat-y 0 0;
 }
 .top_menu {
-  margin: -18px 0px 0px 314px;
-  width: 1580px;
+  margin: -18px 0px 0px 95px;
+  width: 1050px;
   height: 24px;
   ul {
     list-style-type: none;
@@ -88,7 +88,7 @@ a {
   width: 1229px;
   min-height: 350px;
   background: url('/assets/c_bg.gif') repeat-y 0 0;
-  table td {
+  table td.adv {
     padding:15px;
   }
 }
@@ -105,12 +105,16 @@ a {
     }
   }
   .flash {
-    margin-top: -229px;
+    margin-top: -240px;
     margin-left: 28px
   }
   .about {
     margin-top: -65px;
     margin-left: 657px;
+    a div {
+      width: 110px;
+      height: 22px;
+    }
   }
 }
 .c_content{
@@ -149,4 +153,12 @@ a {
   height: 1px;
   line-height: 1px;
   margin: 0 0 -1px;
+}
+.p_center {
+  h2 {
+    text-align: center;
+  }
+  p {
+    text-align: center;
+  }
 }
