--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -72,13 +72,13 @@
         </div>
         <div class="clear">&#160;</div>
       </div>
-      <table width="100%">
+      <table>
         <tr>
-          <td align="right" class="adv"><object width="580" height="150" data="/RUSkompany.swf" type="application/x-shockwave-flash">
+          <td class="adv right"><object width="580" height="150" data="/RUSkompany.swf" type="application/x-shockwave-flash">
             <param name="wmode" value="transparent"/>
             <param value="RUSkompany.swf" name="movie"/></object></td>
-          <td width="50%"></td>
-          <td align="left" class="adv"><object width="580" height="150" data="/BL_banner.swf" type="application/x-shockwave-flash"> 
+          <td class="mid"></td>
+          <td class="adv left"><object width="580" height="150" data="/BL_banner.swf" type="application/x-shockwave-flash"> 
             <param name="wmode" value="transparent"/>
             <param value="BL_banner.swf" name="movie"/></object></td>
         </tr>
